--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="height:100%">
   <head>
     <meta charset="utf-8">
-    <title>Carbot Demo</title>
+    <title>Reo Bot Demo</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
